--- a/client/src/app/admin/service-c/update/update.component.html
+++ b/client/src/app/admin/service-c/update/update.component.html
@@ -31,6 +31,21 @@
                     <img [src]="imageURL" alt="Image Preview" class="max-w-xs md:max-w-md h-10 w-10">
                 </div>
             </div>
+            <div class="flex flex-col md:flex-row py-4">
+                <label class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Type*</label>
+                <div class="md:w-2/4 p-2.5 w-full ">
+                    <div class="flex ">
+                        <label class="inline-flex items-center">
+                            <input type="radio" formControlName="type" value="Administrative" class="form-radio" [(ngModel)]="service.type">
+                            <span class="ml-2 md:text-base text-sm">Administrative</span>
+                        </label>
+                        <label class="inline-flex items-center ml-6">
+                            <input type="radio" formControlName="type" value="Medicale" class="form-radio" [(ngModel)]="service.type">
+                            <span class="ml-2 md:text-base text-sm">Medicale</span>
+                        </label>
+                    </div>
+                </div>
+            </div>
             <div class="flex flex-col justify-start md:flex-row md:pt-20 pt-8">
                 <a type="button" href="Service"
                     class="uppercase inline-flex justify-center px-4 py-2 text-md font-semibold  text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-600 focus:z-10 focus:ring-2 focus:ring-blue-600 focus:text-blue-600 md:mr-2 md:mb-0 mb-2">
