--- a/client/src/app/admin/user/add/add.component.html
+++ b/client/src/app/admin/user/add/add.component.html
@@ -3,7 +3,7 @@
   </div>
 <div class="w-full">
     <div class="px-4 ">
-        <div class="flex inline-flex p-7">
+        <div class="flex inline-flex p-6">
             <svg class="w-6 h-6 text-teal-700 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                 fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd"
@@ -14,36 +14,47 @@
             <h5 class="text-xl font-bold dark:text-white px-1">Ajouter un nouveau utilisateur</h5>
         </div>
         <form [formGroup]="UserForm">
-            <div class="flex flex-col md:flex-row py-8 ">
+            <div class="flex flex-col md:flex-row py-5 ">
                 <label for="name" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Nom*</label>
                 <input type="text" id="name" formControlName="name" placeholder="Saisir votre nom"
                     class="md:text-base text-sm bg-gray-50 border border-gray-300 text-gray-900  rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5 ">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-5">
                 <label for="lastname" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Prénom*</label>
                 <input type="text" id="lastname" formControlName="lastname" placeholder="Saisir votre prenom "
                     class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5 ">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-5">
+                <label for="adresse" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Adresse*</label>
+                <input type="text" id="adresse" formControlName="adresse" placeholder="Saisir votre adresse " class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
+            </div>
+            <div class="flex flex-col md:flex-row py-5">
                 <label for="tel" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Téléphone*</label>
                 <input type="text" id="tel" formControlName="tel" placeholder="Saisir votre téléphone " class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-5">
                 <label for="email" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Email*</label>
                 <input type="text" id="email" formControlName="email" placeholder="Saisir votre email " class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-5">
                 <label for="password" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Paswword*</label>
                 <input type="password" id="password" formControlName="password" placeholder="Saisir votre mot de passe " class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
-                <label for="role" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Role*</label>
+            <div class="flex flex-col md:flex-row py-5">
+                <label for="role" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Service*</label>
                 <select id="role" formControlName="roleId"  class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
                     <option value="Choisir un rôle" selected>Choisir un rôle</option>
                     <option *ngFor='let roles of role' [ngValue]="roles.id">{{roles.name}}</option>
                 </select>
             </div>
-            <div class="flex flex-col justify-start md:flex-row md:pt-20 pt-8">
+            <div class="flex flex-col md:flex-row py-5">
+                <label for="role" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Role*</label>
+                <select id="role" formControlName="serviceId"  class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
+                    <option value="Choisir un service" selected>Choisir un service</option>
+                    <option *ngFor='let services of service' [ngValue]="services.id">{{services.name}}</option>
+                </select>
+            </div>
+            <div class="flex flex-col justify-start md:flex-row md:pt-0 pt-8">
                 <a type="button" routerLink="/user"
                     class="uppercase inline-flex justify-center px-4 py-2 text-md font-semibold  text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-600 focus:z-10 focus:ring-2 focus:ring-blue-600 focus:text-blue-600 md:mr-2 md:mb-0 mb-2">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
