--- a/client/src/app/admin/user/update/update.component.html
+++ b/client/src/app/admin/user/update/update.component.html
@@ -1,10 +1,10 @@
-<div class="p-4 mb-4 text-sm text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400" role="alert" *ngIf="showAlert">
+<div class="p-4 mb-4 text-sm text-teal-800 rounded-lg bg-teal-50 dark:bg-gray-800 dark:text-teal-400" role="alert" *ngIf="showAlert">
     <span class="font-medium capitalize">utilisateur modifié avec succée</span> 
   </div>
 <div class="w-full">
     <div class="px-10 ">
         <div class="flex inline-flex p-7">
-            <svg class="w-6 h-6 text-blue-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            <svg class="w-6 h-6 text-teal-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                 fill="currentColor" viewBox="0 0 24 24">
                 <path fill-rule="evenodd"
                     d="M7 2a2 2 0 0 0-2 2v1a1 1 0 0 0 0 2v1a1 1 0 0 0 0 2v1a1 1 0 1 0 0 2v1a1 1 0 1 0 0 2v1a1 1 0 1 0 0 2v1c0 1.1.9 2 2 2h11a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H7Zm3 8a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm-1 7a3 3 0 0 1 3-3h2a3 3 0 0 1 3 3c0 .6-.4 1-1 1h-6a1 1 0 0 1-1-1Z"
@@ -14,39 +14,52 @@
             <h5 class="text-xl font-bold dark:text-white px-1">Modifier un utilisateur</h5>
         </div>
         <form [formGroup]="UserForm" *ngIf="user">
-            <div class="flex flex-col md:flex-row py-8 ">
+            <div class="flex flex-col md:flex-row py-6 ">
                 <label for="name" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Nom*</label>
-                <input type="text" id="name" formControlName="name" placeholder="Saisir votre nom" [(ngModel)]="user.name"
-                    class="md:text-base text-sm bg-gray-50 border border-gray-300 text-gray-900  rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5 ">
+                <input type="text" id="name" formControlName="name"[(ngModel)]="user.name"
+                    class="md:text-base text-sm bg-gray-50 border border-gray-300 text-gray-900  rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full md:w-2/4 p-2.5 ">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-6">
                 <label for="lastname" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Prénom*</label>
-                <input type="text" id="lastname" formControlName="lastname" placeholder="Saisir votre prenom " [(ngModel)]="user.lastname"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5 ">
+                <input type="text" id="lastname" formControlName="lastname" [(ngModel)]="user.lastname"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full md:w-2/4 p-2.5 ">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-6">
                 <label for="tel" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Téléphone*</label>
-                <input type="text" id="tel" formControlName="tel" placeholder="Saisir votre téléphone " [(ngModel)]="user.tel"
-                class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
+                <input type="text" id="tel" formControlName="tel"  [(ngModel)]="user.tel"
+                class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full md:w-2/4 p-2.5">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-6">
+                <label for="tel" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Adresse*</label>
+                <input type="text" id="tel" formControlName="adresse" [(ngModel)]="user.adresse"
+                class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full md:w-2/4 p-2.5">
+            </div>
+            <div class="flex flex-col md:flex-row py-6">
                 <label for="email" class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Email*</label>
-                <input type="text" id="email" formControlName="email" placeholder="Saisir votre email " [(ngModel)]="user.email"
-                class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-2/4 p-2.5">
+                <input type="text" id="email" formControlName="email" [(ngModel)]="user.email"
+                class="bg-gray-50 border border-gray-300 text-gray-900 md:text-base text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full md:w-2/4 p-2.5">
             </div>
-            <div class="flex flex-col md:flex-row py-8">
+            <div class="flex flex-col md:flex-row py-6">
                 <span class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Role*</span>
                 <div class="md:w-2/4 p-2.5">
-                    <label *ngFor="let role of role" class="inline-flex items-center mr-6">
-                        <input type="radio" [value]="role.id" formControlName="roleId" class="form-radio h-5 w-5 text-blue-600">
-                        <span class="ml-2">{{ role.name }}</span>
+                    <label *ngFor="let roles of role" class="inline-flex items-center mr-6">
+                        <input type="radio" [value]="roles.id" formControlName="roleId" class="form-radio h-5 w-5 text-teal-600">
+                        <span class="ml-2">{{ roles.name }}</span>
                     </label>
                 </div>
             </div>
-        
-            <div class="flex flex-col justify-start md:flex-row md:pt-20 pt-8">
+            <div class="flex flex-col md:flex-row py-6">
+                <span class="md:w-1/4 font-medium md:text-base text-md text-gray-800 md:pr-4 padding-label py-4 md:py-0">Service*</span>
+                <div class="md:w-2/4 p-2.5">
+                    <label *ngFor="let services of service" class="inline-flex items-center mr-6">
+                        <input type="radio" [value]="services.id" formControlName="serviceId" class="form-radio h-5 w-5 text-teal-600">
+                        <span class="ml-2">{{ services.name }}</span>
+                    </label>
+                </div>
+            </div>
+            <div class="flex flex-col justify-start md:flex-row md:pt-0 pt-8">
                 <a type="button"  routerLink="/user"
-                    class="uppercase inline-flex justify-center px-4 py-2 text-md font-semibold  text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-blue-600 focus:z-10 focus:ring-2 focus:ring-blue-600 focus:text-blue-600 md:mr-2 md:mb-0 mb-2">
+                    class="uppercase inline-flex justify-center px-4 py-2 text-md font-semibold  text-gray-900 bg-white border border-gray-200 rounded-l-lg hover:bg-gray-100 hover:text-teal-600 focus:z-10 focus:ring-2 focus:ring-teal-600 focus:text-teal-600 md:mr-2 md:mb-0 mb-2">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-5 h-4 pr-1">
                         <path stroke-linecap="round" stroke-linejoin="round"
